--- a/website/aboutme.html
+++ b/website/aboutme.html
@@ -10,19 +10,19 @@
     <a href="aboutme.html">About Me!</a>
     <h1>Here are Some Things About Me !!</h1>
 <center>
-    <img src="./JM CSP/website/images/jenmall.jpg" style="width:300px;height:420px;">
+    <img src="images/jenmall.jpg" style="width:300px;height:420px;">
 <p>Nice to meet you, I'm 17, and my birthday is on January 8. I am a senior this year. During my free time I like to spend time with friends, play video games, watch video essays, cook, sew, and draw. I'm also a huge nerd when it comes to music, fashion, and retro video games. I love watching movies from the 80's/90's too.</p>
 </center>    
 <hr>
 <center>
-<img src="./JM CSP/website/images/flutes.jpg" style="width:500px;height:300px">
+<img src="images/flutes.jpg" style="width:500px;height:300px">
 <p>I’m also a part of the RBRR!! Here are some pictures of me and some close friends/my section :} (I play flute)</p>
 </center>
 <center>
-  <img src="./JM CSP/website/images/band.jpg" style="width:300px;height:400px">
+  <img src="images/band.jpg" style="width:300px;height:400px">
 <hr>
 <p> I live in a family of six with two older brothers and one younger brother. I don't own any pets but if I did I would own either a cat, cockatiel, red panda or a capybara even(<3).</p>
-  <img src="/JM CSP/website/images/dress.jpg" style="width:230px;height:400px">
+  <img src="images/dress.jpg" style="width:230px;height:400px">
 <p> fun fact: I'm the biggest soup lover ever 
 </center>
 </body>
