--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@ Index html
     <a href="index.html">Jen's Home Page!</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me!</a>
+    <br>
+    <center>
     <img src="https://cdnb.artstation.com/p/assets/images/images/034/525/551/original/marianne-holveck-test.gif?1612520602" style="width:400px;height:248px;">
-    <audio controls>
+    </center>
+    <br>
+      <audio controls>
   <source src="buddyholly.mp3" type="audio/mpeg">
     </audio>
   </body>
