--- a/aboutme.html
+++ b/aboutme.html
@@ -16,10 +16,10 @@
 <hr>
 <center>
 <img src="images/flutes.jpg" style="width:500px;height:300px">
-<p>I’m also a part of the RBRR!! Here are some pictures of me and some close friends/my section :} (I play flute)</p>
+<p>I’m also a part of the RBRR!! Here are some pictures of me and my section :} (I play flute)</p>
 </center>
 <center>
-  <img src="images/band.jpg" style="width:300px;height:400px">
+  <img src="images/flutes2.jpg" style="width:300px;height:400px">
 <hr>
 <p> I live in a family of six with two older brothers and one younger brother. I don't own any pets but if I did I would own either a cat, cockatiel, red panda or a capybara even(<3).</p>
   <img src="images/dress.jpg" style="width:230px;height:400px">
