--- a/portfolio.html
+++ b/portfolio.html
@@ -9,9 +9,13 @@
 <body bgcolor="#FDE3ED">
 
 </body>
-  <a href="index.html">Jen's Home</a>
+  <a href="index.html">Jen's Home Page</a>
   <a href="portfolio.html">Portfolio</a>
   <a href="aboutme.html">About Me!</a>
   <h1>Welcome to my Portfolio Page!</h1>
-
+<center>
+<img src="images/cake.png" style="width:500px;height:300px">
+<img src="images/cakeinput.png" style="width:974px;height:133px">
+<p style="font-size:130%;">Project 1.1.9: Cake Maker- For this project my partners and I created a program that creates a cake based one how many layers, candles and icing the user wants. There are three options for the cake layers: strawberry, vanilla, and chocolate, and the cake can have as many layers as the user wants. When the user no longer wants to add layers, the program will ask for the radius which determines the size of the cake. Once the cake is built, it will ask how many candles the user would like. Finally, the program will ask how many rings of icing the user wants and the cake is complete!</p>
+</center
 </html>
