--- a/aboutme.html
+++ b/aboutme.html
@@ -11,19 +11,19 @@
     <h1>Here are Some Things About Me !!</h1>
 <center>
     <img src="images/jenmall.jpg" style="width:300px;height:420px;">
-<p>Nice to meet you, I'm 17, and my birthday is on January 8. I am a senior this year. During my free time I like to spend time with friends, play video games, watch video essays, cook, sew, and draw. I'm also a huge nerd when it comes to music, fashion, and retro video games. I love watching movies from the 80's/90's too.</p>
+<p style="font-size:110%;">Nice to meet you, I'm 17, and my birthday is on January 8. I am a senior this year. During my free time I like to spend time with friends, play video games, watch video essays, cook, sew, and draw. I'm also a huge nerd when it comes to music, fashion, and retro video games. I love watching movies from the 80's/90's too.</p>
 </center>    
 <hr>
 <center>
 <img src="images/flutes.jpg" style="width:500px;height:300px">
-<p>I’m also a part of the RBRR!! Here are some pictures of me and my section :} (I play flute)</p>
+<p style="font-size:110%;">I’m also a part of the RBRR!! Here are some pictures of me and my section :} (I play flute)</p>
 </center>
 <center>
   <img src="images/flutes2.jpg" style="width:600px;height:400px">
 <hr>
-<p> I live in a family of six with two older brothers and one younger brother. I don't own any pets but if I did I would own either a cat, cockatiel, red panda or a capybara even(<3).</p>
+<p style="font-size:110%;"> I live in a family of six with two older brothers and one younger brother. I don't own any pets but if I did I would own either a cat, cockatiel, red panda or a capybara even(<3).</p>
   <img src="images/dress.jpg" style="width:230px;height:400px">
-<p> fun fact: I'm the biggest soup lover ever 
+<p style="font-size:110%;"> fun fact: I'm the biggest soup lover ever 
 </center>
     <audio controls>
 <source src="fallguys.mp3" type="audio/mpeg">
