--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="aboutme.html">About Me!</a>
     <br>
     <center>
-    <img src="https://cdnb.artstation.com/p/assets/images/images/034/525/551/original/marianne-holveck-test.gif?1612520602" style="width:400px;height:248px;">
+    <img src="https://media.tenor.com/XX6b0YD0h84AAAAi/kawaii-dizzy.gifhttps://media.tenor.com/XX6b0YD0h84AAAAi/kawaii-dizzy.gif" style="width:400px;height:248px;">
     </center>
     <br>
       <audio controls>
