--- a/aboutme.html
+++ b/aboutme.html
@@ -10,20 +10,23 @@
     <a href="aboutme.html">About Me!</a>
     <h1>Here are Some Things About Me !!</h1>
 <center>
+    <img src="images/chip.jpg" style="width:441px;height600px;">
     <img src="images/jenmall.jpg" style="width:300px;height:420px;">
-<p style="font-size:110%;">Nice to meet you, I'm 17, and my birthday is on January 8. I am a senior this year. During my free time I like to spend time with friends, play video games, watch video essays, cook, sew, and draw. I'm also a huge nerd for music, fashion, and retro video games. I love watching movies from the 80's/90's too.</p>
+    <p style="font-size:110%;">Nice to meet you, my name is Jen ᕙ(`▿´)ᕗ I'm a senior, and my birthday is on January 8(I'll be turning 18 wooooo). During my free time I like to spend time with friends, play video games, watch video essays, cook, sew, go camping, and draw. I'm also a huge nerd for music, fashion, and retro video games. I love watching movies from the 80's/90's too.</p>
 </center>    
-<hr>
+<hr> 
 <center>
 <img src="images/flutes.jpg" style="width:500px;height:300px">
-<p style="font-size:110%;">I’m also a part of the RBRR!! Here are some pictures of me and my section :} (I play flute)</p>
+<p style="font-size:110%;">I’m also a part of the RBRR!! Here are some pictures of my section and I :} (I play flute)</p>
 </center>
 <center>
   <img src="images/flutes2.jpg" style="width:600px;height:400px">
 <hr>
-<p style="font-size:110%;"> I live in a family of six with two older brothers and one younger brother. I don't own any pets but if I did I would own either a cat, cockatiel, red panda or even a capybara(<3).</p>
+<p style="font-size:110%;"> I live in a family of six with two older brothers and one younger brother. I don't own any pets but if I did I would own either a cat, red panda, cockatiel, or even a capybara(<3).</p>
   <img src="images/dress.jpg" style="width:230px;height:400px">
-<p style="font-size:110%;"> fun fact: I'm the biggest soup lover ever 
+  <img src="images/banquet.jpg" style="width:800px;height:500px">
+  <p style="font-size:110%;"> fun fact: I'm the biggest soup lover ever.</p>
+  <p style="font-size:110%;"> fun fact #2: I was born in Mexico >:)</p>
 </center>
     <audio controls>
 <source src="buddyholly.mp3" type="audio/mpeg">
