--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 <body bgcolor="#FDE3ED">
 
 </body>
-  <a href="index.html">Jen's Home Page</a>
+  <a href="index.html">Jen's Home Page!</a>
   <a href="portfolio.html">Portfolio</a>
   <a href="aboutme.html">About Me!</a>
   <h1>Welcome to my Portfolio Page!</h1>
