--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
   </head>
 
   <body bgcolor="#F0F7BC">
-    <a href="index.html">Jen's Home</a>
+    <a href="index.html">Jen's Home Page!</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me!</a>
     <h1>Here are Some Things About Me !!</h1>
