--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,8 @@
  <img src="images/pumpkincode.JPG" style="width:320px;height:320px">
   <p style="font-size:130%;">Project 1.2.5 Pumpkin Clicker 101- We had to create a game for this project, so my partner and I programmed a game to test the user's speed and aim. The goal is to catch the falling pumpkins, while failing to click them will result in the player losing one point. There are also bombs to trick the player into clicking them. If the player does so, they will lose five points, while not clicking on them will not result in any penalty. The clicking of the mouse serves as user input, and the falling pumpkins/bombs demonstrate animation and movement.</p>
  <br>
+ <img src="images/frogpg1.PNG" style="width:480px;height:200px">
+ <img src="images/frogpg2.PNG" style="width:400px;height:150px">
   <p style="font-size:130%;">Project 1.3.1 Musical Frogs E-Card- We made a frog themed electronic card that is aimed towards a children's hospital. The card starts with a lilypad in the center
   
   </center>
