--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
  <br>
  <img src="images/frogpg1.PNG" style="width:490px;height:210px">
  <img src="images/frogpg2.PNG" style="width:400px;height:200px">
-  <p style="font-size:130%;">Project 1.3.1 Musical Frogs E-Card- We made a frog themed electronic card that is aimed towards a children's hospital. The card starts with a lilypad in the center that changes to a new scenery when clicked. The frog starts on a boat and when clicked, it will leap onto the four lilypads until it reaches a certain coordinate point the background will change again. This time, there are four frogs instead of one. and clicking on any of them will play a different note :) so kids can create their own fun tune! 𓆏𓆏𓆏𓆏𓆏 &#128056; &#128056;
+  <p style="font-size:130%;">Project 1.3.1 Musical Frogs E-Card- We made a frog themed electronic card that is aimed towards a children's hospital. The card starts with a lilypad in the center that changes to a new scenery when clicked. The frog starts on a boat and when clicked, it will leap onto the four lilypads until it reaches a certain coordinate point the background will change again. This time, there are four frogs instead of one. and clicking on any of them will play a different note :) so kids can create their own fun tune! &#128056; &#128056;
 
   </center>
    <audio controls>
