--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
  <img src="images/mariocode.PNG" style="width:300px;height:210px">
  <img src="images/mariogame.PNG" style="width:390px;height:200px">
  <img src="images/mariogo.PNG" style="width:400px;height:200px">
- <p style="font-size:130%;">Scratch Mario Minigame-
+ <p style="font-size:130%;">Scratch Mario Minigame- This project was created on Scratch and was inspired by the Super Mario series. The goal is to collect all the coins by jumping onto the platforms and to jump on both of the Goombas to defeat them, amd when done so, the message "YOU WIN" is displayed. Touching the Goombas will result in losing the game and the words "GAME OVER" are displayed.</p>
   </center>
    <audio controls>
 <source src="pppf.mp3" type="audio/mpeg">
