--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,9 @@
  <img src="images/mariogo.PNG" style="width:400px;height:200px">
  <p style="font-size:130%;">Scratch Mario Minigame- For this project we had to create a game using Scratch. We created a mini platform game that was inspired by the Super Mario series. The goal is to collect all the coins and to defeat the Goombas by jumping on them. Once the game has been cleared the message "YOU WIN" is displayed. Touching the Goombas will result in losing the game and the words "GAME OVER" will show.</p>
  <br>
-  <p style="font-size:130%;">3.1.6 Project
+ <img src="images/316graphs.PNG" style="width:420px;height:310px"> 
+  <p style="font-size:130%;">3.1.6 Project: Rover Phone Home- The goal for this project was to observe a set of data, sort it, and then determine which data was collected by the gyroscope, light sensor, sound sensor, and a temperature sensor. 
+ 
   </center>
    <audio controls>
 <source src="pppf.mp3" type="audio/mpeg">
