--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img src="https://media.tenor.com/XX6b0YD0h84AAAAi/kawaii-dizzy.gifhttps://media.tenor.com/XX6b0YD0h84AAAAi/kawaii-dizzy.gif" style="width:400px;height:260px;">
     </center>
     <br>
-      <audio controls>
+      <audio controls autoplay>
   <source src="partyrockers.mp3" type="audio/mpeg">
     </audio>
   </body>
