--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
   <p style="font-size:130%;">3.1.6 Project: Rover Phone Home- The goal for this project was to find the location of a rover that was lost while exploring a planet. We had to observe a set of data, sort it, and then determine which data was collected by the gyroscope, light sensor, sound sensor, and a temperature sensor. We turned each set of data into a graph and compared it to a checklist that contained the characteristics for each region on the planet.
  
   </center>
-   <audio controls>
+   <audio controls autoplay>
 <source src="pppf.mp3" type="audio/mpeg">
     </audio>
 </html>
