--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
  <img src="images/mariocode.PNG" style="width:420px;height:310px">
  <img src="images/mariogame.PNG" style="width:390px;height:210px">
  <img src="images/mariogo.PNG" style="width:400px;height:200px">
- <p style="font-size:130%;">Scratch Mario Minigame- For this project we had to create a game using Scratch. We created a mini platform game that was inspired by the Super Mario series. The goal is to collect all the coins and to defeat the Goombas by jumping on them. Once the game has been cleared the message "YOU WIN" is displayed. Touching the Goombas will result in losing the game and the words "GAME OVER" will show.</p>
+ <p style="font-size:130%;">Scratch Mario Minigame- For this project we had to create a game using Scratch. We created a mini platform game that was inspired by the Super Mario series. The goal is to collect all the coins and to defeat the Goombas by jumping on them. Once the game has been cleared the message "YOU WIN" is displayed. Touching the Goombas will result in losing the game and the words "GAME OVER" will appear instead.</p>
  <br>
  <img src="images/ds12.png" style="width:620px;height:200px">
  <img src="images/ds34.png" style="width:620px;height:200px">
